--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "watch": "mix watch"
     },
     "devDependencies": {
         "@headlessui/react": "^1.4.2",
@@ -11,6 +12,7 @@
         "@inertiajs/progress": "^0.2.6",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^2.0.0",
+        "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.7.0",
@@ -20,5 +22,10 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "@flareapp/flare-webpack-plugin-sourcemap": "^1.2.0",
+        "laravel-mix": "^6.0.49",
+        "webpack": "^5.75.0"
     }
 }
