--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "@flareapp/flare-webpack-plugin-sourcemap": "^1.2.0",
         "laravel-mix": "^6.0.49",
+        "prop-types": "^15.8.1",
         "webpack": "^5.75.0"
     }
 }
