--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     },
     "dependencies": {
         "@flareapp/flare-webpack-plugin-sourcemap": "^1.2.0",
+        "flickity": "^2.3.0",
         "laravel-mix": "^6.0.49",
         "prop-types": "^15.8.1",
+        "react-flickity-component": "^3.6.3",
         "webpack": "^5.75.0"
     }
 }
