--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "laravel-mix": "^6.0.49",
         "prop-types": "^15.8.1",
         "react-flickity-component": "^3.6.3",
+        "react-player": "^2.11.0",
         "webpack": "^5.75.0"
     }
 }
